<resources>
    <string name="app_name">Chat Me</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">Or</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="login_using_your_phone">Login using your phone</string>
    <string name="not_having_any_account">Not having any account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="error_email">Email address must be of the form example@gmail.com</string>
    <string name="user_name">User name</string>
    <string name="introduce_yourself">Introduce Yourself</string>
    <string name="work">Work</string>
    <string name="home_town">Home Town</string>
    <string name="chat_here">Chat here</string>
</resources>