<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/chatmelogo"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/register_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:background="@drawable/edittext_style"
            android:padding="10dp"
            android:drawableStart="@drawable/user_name"
            android:drawablePadding="5dp"
            android:drawableTint="@color/violet"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:background="@drawable/edittext_style"
            android:padding="10dp"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="5dp"
            android:drawableTint="@color/violet"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_style"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="5dp"
            android:drawableTint="@color/violet"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/introduce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_style"
            android:drawableStart="@drawable/ic_baseline_auto_story"
            android:drawablePadding="5dp"
            android:drawableTint="@color/violet"
            android:hint="@string/introduce_yourself"
            android:padding="10dp" />

        <EditText
            android:id="@+id/work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_style"
            android:drawableStart="@drawable/ic_baseline_work"
            android:drawablePadding="5dp"
            android:drawableTint="@color/violet"
            android:hint="@string/work"
            android:padding="10dp" />

        <EditText
            android:id="@+id/home_town"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_style"
            android:drawableStart="@drawable/ic_baseline_home"
            android:drawablePadding="5dp"
            android:drawableTint="@color/violet"
            android:hint="@string/home_town"
            android:padding="10dp" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginTop="25dp"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:background="@drawable/button_style"/>

        <TextView
            android:id="@+id/had_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAlignment="center"
            />
    </LinearLayout>

</ScrollView>

</layout>