<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/chatmelogo"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:background="@drawable/edittext_style"
            android:padding="10dp"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="5dp"
            android:drawableTint="@color/violet"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_style"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="5dp"
            android:drawableTint="@color/violet"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="25dp"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:background="@drawable/button_style"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:layout_marginTop="15dp"
            />


        <TextView
            android:id="@+id/not_having_any_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_having_any_account"
            android:textColor="@color/grey"
            android:textAlignment="center"
            android:layout_marginTop="150dp"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_account"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAlignment="center"
            />
    </LinearLayout>

</ScrollView>

</layout>


<!--<TextView-->
<!--android:id="@+id/or"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:text="@string/or"-->
<!--android:textColor="@color/grey"-->
<!--android:textAlignment="center"-->
<!--android:textSize="18sp"-->
<!--    />-->

<!--<TextView-->
<!--android:id="@+id/login_using_your_phone"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:text="@string/login_using_your_phone"-->
<!--android:textColor="@color/black"-->
<!--android:textAlignment="center"-->
<!--android:textSize="18sp"-->
<!--    />-->

<!--<TextView-->
<!--android:id="@+id/mobile_phone"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:text="Phone"-->
<!--android:textColor="@color/colorAccent"-->
<!--android:textSize="20sp"-->
<!--android:textStyle="bold"-->
<!--android:background="@drawable/button_style"-->
<!--android:padding="10dp"-->
<!--android:drawableLeft="@drawable/mobile_icon"-->
<!--android:drawableTint="@color/violet"-->
<!--android:textAlignment="center"-->
<!--    />-->

